Fixed Contact Footer Spacing For Mobile

--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -535,7 +535,6 @@
 		#footer header.style1
 		{
             padding-top: 0;
-			padding-bottom: 0;
 		}
 
 		#footer hr
